--- a/views/public/css/ViewUsuario.css
+++ b/views/public/css/ViewUsuario.css
@@ -28,6 +28,10 @@ body {
     background-color: white;
     position: absolute;
 }
+#btnFormLogin,
+#btnFormRegister{
+    cursor: pointer;
+}
 .login div,
 .register div {
     display: flex;
