--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -83,7 +83,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(/views/public/img/fondoCredito.jpg);
+    background-image: url(/views/public/img/fondoIndex.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -96,7 +96,7 @@ body {
     display: inherit;
     align-items: inherit;
     justify-content: inherit;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(3px);
     border: 1px solid white;
     box-shadow: 5px 5px 10px black;
     position: relative;
@@ -125,5 +125,5 @@ body {
     
     height: 100%;
     transition: ease-in-out 0.6s;
-    background-color: #62c3f8;
+    background-color: #dd0f0f;
 }
