--- a/views/pages/ViewUsuario.html
+++ b/views/pages/ViewUsuario.html
@@ -46,7 +46,7 @@
         <button type="button">Registrarse</button>
         <p id="btnFormRegister">¿Ya tiene cuenta?</p>
     </form>
-    <script src="/views/public/js/script.js"></script>
+    <script type ="module" src="/views/public/js/script.js"></script>
 </body>
 
 </html>
