--- a/views/pages/ViewUsuario.html
+++ b/views/pages/ViewUsuario.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usuarios</title>
     <link rel="stylesheet" href="/views/public/css/ViewUsuario.css" />
+    
 </head>
 
 <body>
@@ -49,6 +50,7 @@
     </form>
     <script type ="module" src="/views/public/js/script.js"></script>
     <script type ="module" src="/views/public/js/scriptUsuario.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
