--- a/views/pages/ViewUsuario.html
+++ b/views/pages/ViewUsuario.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usuarios</title>
-    <link rel="stylesheet" href="/views/public/css/ViewUsuario.css" />
+    <link rel="stylesheet" href="../public/css/ViewUsuario.css" />
     
 </head>
 
@@ -48,8 +48,8 @@
         <button id="btnRegistrar" type="button">Registrarse</button>
         <p id="btnFormRegister">¿Ya tiene cuenta?</p>
     </form>
-    <script type ="module" src="/views/public/js/script.js"></script>
-    <script type ="module" src="/views/public/js/scriptUsuario.js"></script>
+    <script type ="module" src="../public/js/script.js"></script>
+    <script type ="module" src="../public/js/scriptUsuario.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
